Branches networking-hyperv (Queens)
Change-Id: I05931029051769acb70220305a241d4757ca0b3f

--- a/deliverables/queens/networking-hyperv.yaml
+++ b/deliverables/queens/networking-hyperv.yaml
@@ -11,3 +11,6 @@ releases:
         hash: 893048dd2e3ca3d3a57584e22f5d3de1d4884870
 repository-settings:
   openstack/networking-hyperv: {}
+branches:
+  - location: 6.0.0
+    name: stable/queens
