queens: release zaqar 6.0.0.0rc1
Change-Id: I1d932c38b45fea286787d8e1f09e797e6bc0aae5

--- a/deliverables/queens/zaqar.yaml
+++ b/deliverables/queens/zaqar.yaml
@@ -16,5 +16,12 @@ releases:
     projects:
       - repo: openstack/zaqar
         hash: 14de6dc7f934b5bbe26df96a4971b8dbf30adbc3
+  - version: 6.0.0.0rc1
+    projects:
+      - repo: openstack/zaqar
+        hash: f605dd9bae5c43811bcf32962825d8f65b60d6e6
+branches:
+  - location: 6.0.0.0rc1
+    name: stable/queens
 repository-settings:
   openstack/zaqar: {}
