--- a/deliverables/queens/magnum.yaml
+++ b/deliverables/queens/magnum.yaml
@@ -8,6 +8,10 @@ releases:
       - hash: 710192a63fd36186e9669cc2ac00dca2cc4fcc81
         repo: openstack/magnum
     version: 6.0.0
+  - projects:
+      - hash: 710192a63fd36186e9669cc2ac00dca2cc4fcc81
+        repo: openstack/magnum
+    version: 6.0.1
 branches:
   - name: stable/queens
     location: 6.0.0
