--- a/deliverables/queens/heat-translator.yaml
+++ b/deliverables/queens/heat-translator.yaml
@@ -4,5 +4,13 @@ launchpad: heat-translator
 release-model: cycle-with-intermediary
 team: heat
 type: other
+releases:
+  - version: 1.0.0
+    projects:
+      - repo: openstack/heat-translator
+        hash: db60b7e8312c8051b8814aa10318b97e48a69e6a
+branches:
+  - name: stable/queens
+    location: 1.0.0
 repository-settings:
   openstack/heat-translator: {}
