Require tacker-horizon for queens cycle
Change-Id: Iad3b30ede12ebac82d8c09a0d80d1314ee3ff603
Depends-On: https://review.openstack.org/542879

--- a/deliverables/queens/tacker-horizon.yaml
+++ b/deliverables/queens/tacker-horizon.yaml
@@ -3,5 +3,13 @@ launchpad: tacker
 release-model: cycle-with-intermediary
 team: tacker
 type: horizon-plugin
+branches:
+  - name: stable/queens
+    location: 0.11.0
+releases:
+  - projects:
+      - hash: d61d76a0e7b788ef08ed9367a79d7f8aaa61c8f3
+        repo: openstack/tacker-horizon
+    version: 0.11.0
 repository-settings:
   openstack/tacker-horizon: {}
