--- a/deliverables/queens/networking-sfc.yaml
+++ b/deliverables/queens/networking-sfc.yaml
@@ -18,5 +18,12 @@ releases:
       - hash: 931f5e435014b14e41614d067c1f115ff6be68aa
         repo: openstack/networking-sfc
     version: 6.0.0.0b3
+  - projects:
+      - hash: 931f5e435014b14e41614d067c1f115ff6be68aa
+        repo: openstack/networking-sfc
+    version: 6.0.0.0rc1
 repository-settings:
   openstack/networking-sfc: {}
+branches:
+  - location: 6.0.0.0rc1
+    name: stable/queens
