--- a/deliverables/queens/networking-bgpvpn.yaml
+++ b/deliverables/queens/networking-bgpvpn.yaml
@@ -17,5 +17,21 @@ releases:
       - hash: 40d2a0422f7b20aef98afa410f1c2ecc15a38a09
         repo: openstack/networking-bgpvpn
     version: 8.0.0.0b3
+  - projects:
+      - hash: cc671c8871a896d09f598235741f7f938b9f4b8f
+        repo: openstack/networking-bgpvpn
+    version: 8.0.0.0rc1
 repository-settings:
   openstack/networking-bgpvpn: {}
+branches:
+  - location: 8.0.0.0rc1
+    name: stable/queens
+cycle-highlights:
+  - This release introduces a new API extension 'bgpvpn-routes-control' that offers.
+    fine-grained control of route advertisements in BGPVPNs, including API-defined
+    static routes, and inter-BGPVPN route leaking.
+  - This release introduces a new API extension 'bgpvpn-vni' that allows to control
+    the VXLAN VNI used for E-VPN.
+  - The BGPVPN reference driver has been refactored to use more extensible RPC messages.
+  - The BGPVPN reference driver and now implements E-VPN for OVS (linuxbridge was already
+    supported).
