--- a/deliverables/queens/networking-midonet.yaml
+++ b/deliverables/queens/networking-midonet.yaml
@@ -18,5 +18,12 @@ releases:
       - hash: abe70603a2776a3fd5e6f7addc262653fde61019
         repo: openstack/networking-midonet
     version: 6.0.0.0b3
+  - projects:
+      - hash: 29847e1f0663689e709a2693bf24b4e7f8d827ad
+        repo: openstack/networking-midonet
+    version: 6.0.0.0rc1
 repository-settings:
   openstack/networking-midonet: {}
+branches:
+  - location: 6.0.0.0rc1
+    name: stable/queens
