--- a/deliverables/queens/neutron-fwaas.yaml
+++ b/deliverables/queens/neutron-fwaas.yaml
@@ -17,5 +17,15 @@ releases:
       - hash: e5f5c3f44531d2b6c9d813bc8f6d69e685af8c14
         repo: openstack/neutron-fwaas
     version: 12.0.0.0b3
+  - projects:
+      - hash: 4bc4fa5af14b362a38ead50e2673a0378f43fc57
+        repo: openstack/neutron-fwaas
+    version: 12.0.0.0rc1
 repository-settings:
   openstack/neutron-fwaas: {}
+branches:
+  - location: 12.0.0.0rc1
+    name: stable/queens
+cycle-highlights:
+  - FWaaS V2.0 now supports L2 VM ports and l3 router ports.
+  - FWaaS V2.0 co-exists with Neutron security groups.
