--- a/deliverables/queens/neutron.yaml
+++ b/deliverables/queens/neutron.yaml
@@ -16,5 +16,16 @@ releases:
       - hash: 7e3d6a18fb928bcd303a44c1736d0d6ca9c7f0ab
         repo: openstack/neutron
     version: 12.0.0.0b3
+  - projects:
+      - hash: e6b4fe995d903844c5d4c3dcd98bb424814eeb04
+        repo: openstack/neutron
+    version: 12.0.0.0rc1
 repository-settings:
   openstack/neutron: {}
+branches:
+  - location: 12.0.0.0rc1
+    name: stable/queens
+cycle-highlights:
+  - ML2 implements Quality of Service rate limits for floating IPs.
+  - ML2 implementes a logging API for security groups.
+  - API supports filtering port with IP address substring.
