heat-translator is used as a library
Change-Id: I9f680539f2072570bc73f4d791821c50f4a27dea
Signed-off-by: Doug Hellmann <doug@doughellmann.com>

--- a/deliverables/queens/heat-translator.yaml
+++ b/deliverables/queens/heat-translator.yaml
@@ -3,7 +3,7 @@ include-pypi-link: yes
 launchpad: heat-translator
 release-model: cycle-with-intermediary
 team: heat
-type: other
+type: library
 releases:
   - version: 1.0.0
     projects:
