--- a/deliverables/ocata/glance.yaml
+++ b/deliverables/ocata/glance.yaml
@@ -36,5 +36,9 @@ releases:
     projects:
       - repo: openstack/glance
         hash: 8997684aabe54d0a8ba43aff0be52f64153d8a1a
+  - version: 14.0.1
+    projects:
+      - repo: openstack/glance
+        hash: 3b7c58003de9d6e9e67b2ccbcdc0addd77b17191
 repository-settings:
   openstack/glance: {}
