--- a/deliverables/pike/glance.yaml
+++ b/deliverables/pike/glance.yaml
@@ -35,5 +35,9 @@ releases:
       - repo: openstack/glance
         hash: 982016670fe908e5d7026714b115e63b7c31b46b
     version: 15.0.0
+  - version: 15.0.1
+    projects:
+      - repo: openstack/glance
+        hash: 5c1f76d91012c9cc7b12f76e917af9e9a9bb7667
 repository-settings:
   openstack/glance: {}
