--- a/deliverables/pike/heat.yaml
+++ b/deliverables/pike/heat.yaml
@@ -41,5 +41,9 @@ releases:
     projects:
       - repo: openstack/heat
         hash: ed3eb9fe823e193e850e170405eecbc1411667f6
+  - version: 9.0.3
+    projects:
+      - repo: openstack/heat
+        hash: cda1cf15f4a20355c58bd26e2f4ce00007a15266
 repository-settings:
   openstack/heat: {}
