--- a/tox.ini
+++ b/tox.ini
@@ -31,7 +31,6 @@ commands =
     {toxinidir}/tools/tox-log-command.sh list-changes {posargs}
 
 [testenv:pep8]
-deps = flake8>=2.2.4,<=2.4.1
 commands = flake8
 
 [testenv:bashate]
@@ -72,7 +71,7 @@ commands =
 # E501 skipped because some of the code files include templates
 #      that end up quite wide
 show-source = True
-ignore = E123,E125,E501
+ignore = E123,E125,E501,H405
 builtins = _
 exclude=.venv,.git,.tox,dist,doc,*lib/python*,*egg,build,release-tag-*
 
