New tooz release for msgpack rename
Depends-On: I92cb78b4e361023f04424b3c52ac8ec8e0c82d5f
Change-Id: I727287fdfabcd0dbce4d72c357685243ffd7aa54

--- a/deliverables/queens/tooz.yaml
+++ b/deliverables/queens/tooz.yaml
@@ -9,6 +9,10 @@ releases:
       - hash: 29ec8eb26addf83877be54ff9ea90e6873043620
         repo: openstack/tooz
     version: 1.59.0
+  - projects:
+      - hash: 4fd0c8a6ba7ffca76b02812242ab83e3604ed36a
+        repo: openstack/tooz
+    version: 1.60.0
 branches:
   - name: stable/queens
     location: 1.59.0
