--- a/deliverables/queens/python-mistralclient.yaml
+++ b/deliverables/queens/python-mistralclient.yaml
@@ -14,6 +14,10 @@ releases:
         hash: 69e8925b20ecf08647c1091d8928479c72533422
     highlights: |
       - Fixed TARGET_ authentication parameters
+  - version: 3.3.0
+    projects:
+      - repo: openstack/python-mistralclient
+        hash: 1008e4e4cbd58465226a54c261b1d73021fcd2ed
 release-notes: https://docs.openstack.org/releasenotes/python-mistralclient/queens.html
 repository-settings:
   openstack/python-mistralclient: {}
