pymod2pkg: Release version 0.13.2
This fixes a translation rule for ironic-python-agent on SUSE.

Change-Id: I3bf8ade68950d11036315d98522ed3a14d463886

--- a/deliverables/_independent/pymod2pkg.yaml
+++ b/deliverables/_independent/pymod2pkg.yaml
@@ -124,3 +124,9 @@ releases:
       - hash: aaf133418169a1636a1e7e5b1500ac3f46aa9215
         repo: openstack/pymod2pkg
     version: 0.13.1
+  - projects:
+      - hash: d7191fb364f14c0bd204a281443b1fd81efcb04d
+        repo: openstack/pymod2pkg
+    version: 0.13.2
+repository-settings:
+  openstack/pymod2mkg: {}
