Add missing stable/queens branches
Change-Id: I9e662664fe9e6854f05d6d7fbd20178855084fa2

--- a/deliverables/queens/aodh.yaml
+++ b/deliverables/queens/aodh.yaml
@@ -11,3 +11,6 @@ releases:
         hash: dff1529d09fa8a1b79c4fd220a84c503f6263c2d
 repository-settings:
   openstack/aodh: {}
+branches:
+  - location: 6.0.0
+    name: stable/queens
