--- a/deliverables/queens/blazar-dashboard.yaml
+++ b/deliverables/queens/blazar-dashboard.yaml
@@ -11,3 +11,6 @@ releases:
     version: 1.0.0
 repository-settings:
   openstack/blazar-dashboard: {}
+branches:
+  - location: 1.0.0
+    name: stable/queens
