--- a/deliverables/queens/manila-ui.yaml
+++ b/deliverables/queens/manila-ui.yaml
@@ -19,3 +19,6 @@ releases:
         hash: da1ac1ec03352332616849de8d947d2f9de20ce5
 repository-settings:
   openstack/manila-ui: {}
+branches:
+  - location: 2.13.0
+    name: stable/queens
