--- a/deliverables/queens/mistral.yaml
+++ b/deliverables/queens/mistral.yaml
@@ -41,3 +41,6 @@ repository-settings:
   openstack/mistral: {}
   openstack/mistral-dashboard: {}
   openstack/mistral-extra: {}
+branches:
+  - location: 6.0.0.0rc1
+    name: stable/queens
