--- a/deliverables/queens/os-refresh-config.yaml
+++ b/deliverables/queens/os-refresh-config.yaml
@@ -19,3 +19,6 @@ releases:
     version: 8.2.0
 repository-settings:
   openstack/os-refresh-config: {}
+branches:
+  - location: 8.2.0
+    name: stable/queens
