--- a/deliverables/queens/panko.yaml
+++ b/deliverables/queens/panko.yaml
@@ -11,3 +11,6 @@ releases:
         hash: 849a579b3a8c88da722be2a7b46514b8c0115ee8
 repository-settings:
   openstack/panko: {}
+branches:
+  - location: 4.0.0
+    name: stable/queens
