--- a/deliverables/queens/paunch.yaml
+++ b/deliverables/queens/paunch.yaml
@@ -19,3 +19,6 @@ releases:
     version: 2.2.0
 repository-settings:
   openstack/paunch: {}
+branches:
+  - location: 2.2.0
+    name: stable/queens
