--- a/deliverables/queens/senlin-dashboard.yaml
+++ b/deliverables/queens/senlin-dashboard.yaml
@@ -11,3 +11,6 @@ releases:
         hash: 4afb7e1ab4c324e70f924df370971d7e30ec3bf6
 repository-settings:
   openstack/senlin-dashboard: {}
+branches:
+  - location: 0.8.0
+    name: stable/queens
