--- a/deliverables/queens/instack-undercloud.yaml
+++ b/deliverables/queens/instack-undercloud.yaml
@@ -19,3 +19,6 @@ releases:
     version: 8.2.0
 repository-settings:
   openstack/instack-undercloud: {}
+branches:
+  - location: 8.2.0
+    name: stable/queens
