Create stable/queens for devstack
Change-Id: I0871c91dcc43abd98239d84a2aed73e08d77f90b

--- a/deliverables/queens/devstack.yaml
+++ b/deliverables/queens/devstack.yaml
@@ -4,5 +4,9 @@ release-model: untagged
 team: 'Quality Assurance'
 type: other
 stable-branch-type: tagless
+branches:
+  - location:
+      openstack-dev/devstack: 47467acf2f607c7e436eb3d42c5cf764011883f9
+    name: stable/queens
 repository-settings:
   openstack-dev/devstack: {}
