--- a/deliverables/queens/glance.yaml
+++ b/deliverables/queens/glance.yaml
@@ -9,11 +9,11 @@ branches:
   - name: stable/queens
     location: 16.0.0.0rc1
 cycle-highlights:
-  - Introduced the Image API v2.6, including interoperable image import
-  - Added a new import-method, 'web-download'
-  - Added import plugin scaffolding and a new import plugin that
-    injects image metadata upon import
-  - Updated the glance-manage and glance-scrubber tools
+  - 'Introduced the Image API v2.6, including interoperable image import'
+  - 'Added a new import-method, ''web-download'''
+  - 'Added import plugin scaffolding and a new import plugin that injects image metadata
+    upon import'
+  - 'Updated the glance-manage and glance-scrubber tools'
 releases:
   - version: 16.0.0.0b1
     projects:
@@ -33,3 +33,4 @@ releases:
         hash: d027102b2e8c41740f4f832868e634bc35cfc1cb
 repository-settings:
   openstack/glance: {}
+release-notes: https://docs.openstack.org/releasenotes/glance/queens.html
