--- a/deliverables/queens/heat.yaml
+++ b/deliverables/queens/heat.yaml
@@ -25,3 +25,4 @@ releases:
         hash: 98636290c5a4ed9c7d608a1944124b5d92678107
 repository-settings:
   openstack/heat: {}
+release-notes: https://docs.openstack.org/releasenotes/heat/queens.html
