--- a/deliverables/queens/ironic-inspector.yaml
+++ b/deliverables/queens/ironic-inspector.yaml
@@ -22,3 +22,4 @@ branches:
     name: stable/queens
 repository-settings:
   openstack/ironic-inspector: {}
+release-notes: https://docs.openstack.org/releasenotes/ironic-inspector/queens.html
