--- a/deliverables/queens/ironic-python-agent.yaml
+++ b/deliverables/queens/ironic-python-agent.yaml
@@ -22,3 +22,4 @@ branches:
     name: stable/queens
 repository-settings:
   openstack/ironic-python-agent: {}
+release-notes: https://docs.openstack.org/releasenotes/ironic-python-agent/queens.html
