--- a/deliverables/queens/magnum.yaml
+++ b/deliverables/queens/magnum.yaml
@@ -17,3 +17,4 @@ branches:
     location: 6.0.0
 repository-settings:
   openstack/magnum: {}
+release-notes: https://docs.openstack.org/releasenotes/magnum/queens.html
