--- a/deliverables/queens/monasca-log-api.yaml
+++ b/deliverables/queens/monasca-log-api.yaml
@@ -21,3 +21,4 @@ branches:
     name: stable/queens
 repository-settings:
   openstack/monasca-log-api: {}
+release-notes: https://docs.openstack.org/releasenotes/monasca-log-api/queens.html
