--- a/deliverables/queens/murano-agent.yaml
+++ b/deliverables/queens/murano-agent.yaml
@@ -13,3 +13,4 @@ branches:
     location: 3.4.0
 repository-settings:
   openstack/murano-agent: {}
+release-notes: https://docs.openstack.org/releasenotes/murano-agent/queens.html
