--- a/deliverables/queens/networking-generic-switch.yaml
+++ b/deliverables/queens/networking-generic-switch.yaml
@@ -18,3 +18,4 @@ branches:
     name: stable/queens
 repository-settings:
   openstack/networking-generic-switch: {}
+release-notes: https://docs.openstack.org/releasenotes/networking-generic-switch/queens.html
