--- a/deliverables/queens/networking-odl.yaml
+++ b/deliverables/queens/networking-odl.yaml
@@ -27,3 +27,4 @@ repository-settings:
 branches:
   - location: 12.0.0.0rc1
     name: stable/queens
+release-notes: https://docs.openstack.org/releasenotes/networking-odl/queens.html
