--- a/deliverables/queens/networking-sfc.yaml
+++ b/deliverables/queens/networking-sfc.yaml
@@ -27,3 +27,4 @@ repository-settings:
 branches:
   - location: 6.0.0.0rc1
     name: stable/queens
+release-notes: https://docs.openstack.org/releasenotes/networking-sfc/queens.html
