--- a/deliverables/queens/neutron-fwaas.yaml
+++ b/deliverables/queens/neutron-fwaas.yaml
@@ -27,5 +27,6 @@ branches:
   - location: 12.0.0.0rc1
     name: stable/queens
 cycle-highlights:
-  - FWaaS V2.0 now supports L2 VM ports and l3 router ports.
-  - FWaaS V2.0 co-exists with Neutron security groups.
+  - 'FWaaS V2.0 now supports L2 VM ports and l3 router ports.'
+  - 'FWaaS V2.0 co-exists with Neutron security groups.'
+release-notes: https://docs.openstack.org/releasenotes/neutron-fwaas/queens.html
