--- a/deliverables/queens/neutron.yaml
+++ b/deliverables/queens/neutron.yaml
@@ -26,6 +26,7 @@ branches:
   - location: 12.0.0.0rc1
     name: stable/queens
 cycle-highlights:
-  - ML2 implements Quality of Service rate limits for floating IPs.
-  - ML2 implementes a logging API for security groups.
-  - API supports filtering port with IP address substring.
+  - 'ML2 implements Quality of Service rate limits for floating IPs.'
+  - 'ML2 implementes a logging API for security groups.'
+  - 'API supports filtering port with IP address substring.'
+release-notes: https://docs.openstack.org/releasenotes/neutron/queens.html
