--- a/deliverables/queens/octavia.yaml
+++ b/deliverables/queens/octavia.yaml
@@ -3,7 +3,7 @@ include-pypi-link: yes
 storyboard: 908
 release-model: cycle-with-milestones
 release-type: python-pypi
-release-notes: https://docs.openstack.org/releasenotes/octavia/unreleased.html
+release-notes: https://docs.openstack.org/releasenotes/octavia/queens.html
 team: octavia
 type: service
 releases:
@@ -27,10 +27,9 @@ branches:
   - location: 2.0.0.0rc1
     name: stable/queens
 cycle-highlights:
-  - Added the ability to batch update pool members.
-  - A Neutron Quality of Service (QoS) policy can now be applied to Octavia
-    load balancers.
-  - Octavia now supports using Castellan and PKCS12 bundles for TLS
-    termination.
+  - 'Added the ability to batch update pool members.'
+  - 'A Neutron Quality of Service (QoS) policy can now be applied to Octavia load
+    balancers.'
+  - 'Octavia now supports using Castellan and PKCS12 bundles for TLS termination.'
 repository-settings:
   openstack/octavia: {}
