--- a/deliverables/queens/os-brick.yaml
+++ b/deliverables/queens/os-brick.yaml
@@ -30,3 +30,4 @@ branches:
     location: 2.3.0
 repository-settings:
   openstack/os-brick: {}
+release-notes: https://docs.openstack.org/releasenotes/os-brick/queens.html
