--- a/deliverables/queens/python-openstacksdk.yaml
+++ b/deliverables/queens/python-openstacksdk.yaml
@@ -35,11 +35,10 @@ branches:
   - name: stable/queens
     location: 0.11.0
 cycle-highlights:
-  - Merged code from shade, os-client-config and openstacksdk into a single
-    library as part of an effort to unify and simplify our client-side
-    libraries.
-  - Added support for making direct REST calls to all OpenStack services.
-  - Updated pagination support to support all existing forms of pagination.
-    Pagination now works automatically behind the scenes.
+  - 'Merged code from shade, os-client-config and openstacksdk into a single library
+    as part of an effort to unify and simplify our client-side libraries.'
+  - 'Added support for making direct REST calls to all OpenStack services.'
+  - 'Updated pagination support to support all existing forms of pagination. Pagination
+    now works automatically behind the scenes.'
 repository-settings:
   openstack/python-openstacksdk: {}
