--- a/deliverables/queens/python-senlinclient.yaml
+++ b/deliverables/queens/python-senlinclient.yaml
@@ -22,3 +22,4 @@ branches:
     name: stable/queens
 repository-settings:
   openstack/python-senlinclient: {}
+release-notes: https://docs.openstack.org/releasenotes/python-senlinclient/queens.html
