--- a/deliverables/queens/python-tackerclient.yaml
+++ b/deliverables/queens/python-tackerclient.yaml
@@ -14,3 +14,4 @@ branches:
     name: stable/queens
 repository-settings:
   openstack/python-tackerclient: {}
+release-notes: https://docs.openstack.org/releasenotes/python-tackerclient/queens.html
