--- a/deliverables/queens/solum.yaml
+++ b/deliverables/queens/solum.yaml
@@ -17,3 +17,4 @@ branches:
     name: stable/queens
 repository-settings:
   openstack/solum: {}
+release-notes: https://docs.openstack.org/releasenotes/solum/queens.html
