--- a/deliverables/queens/vitrage-dashboard.yaml
+++ b/deliverables/queens/vitrage-dashboard.yaml
@@ -19,3 +19,4 @@ releases:
         hash: 3df18819d90ed3910b383493c8a0cc9c4b4ee7e6
 repository-settings:
   openstack/vitrage-dashboard: {}
+release-notes: https://docs.openstack.org/releasenotes/vitrage-dashboard/queens.html
