--- a/deliverables/queens/vitrage.yaml
+++ b/deliverables/queens/vitrage.yaml
@@ -22,3 +22,4 @@ releases:
         hash: f14977e8a28753917e48b98ac5d6ab5263e7aa96
 repository-settings:
   openstack/vitrage: {}
+release-notes: https://docs.openstack.org/releasenotes/vitrage/queens.html
