--- a/deliverables/queens/zun-ui.yaml
+++ b/deliverables/queens/zun-ui.yaml
@@ -13,3 +13,4 @@ branches:
     location: 1.0.0
 repository-settings:
   openstack/zun-ui: {}
+release-notes: https://docs.openstack.org/releasenotes/zun-ui/queens.html
