--- a/deliverables/queens/bifrost.yaml
+++ b/deliverables/queens/bifrost.yaml
@@ -13,3 +13,4 @@ branches:
     location: 5.0.0
 repository-settings:
   openstack/bifrost: {}
+release-notes: https://docs.openstack.org/releasenotes/bifrost/queens.html
