--- a/deliverables/queens/ceilometermiddleware.yaml
+++ b/deliverables/queens/ceilometermiddleware.yaml
@@ -14,3 +14,4 @@ branches:
     name: stable/queens
 repository-settings:
   openstack/ceilometermiddleware: {}
+release-notes: https://docs.openstack.org/releasenotes/ceilometermiddleware/queens.html
