--- a/deliverables/queens/heat-agents.yaml
+++ b/deliverables/queens/heat-agents.yaml
@@ -26,3 +26,4 @@ branches:
     location: 1.5.3
 repository-settings:
   openstack/heat-agents: {}
+release-notes: https://docs.openstack.org/releasenotes/heat-agents/queens.html
