--- a/deliverables/queens/murano-dashboard.yaml
+++ b/deliverables/queens/murano-dashboard.yaml
@@ -26,3 +26,4 @@ repository-settings:
 branches:
   - location: 5.0.0.0rc1
     name: stable/queens
+release-notes: https://docs.openstack.org/releasenotes/murano-dashboard/queens.html
