--- a/deliverables/queens/murano.yaml
+++ b/deliverables/queens/murano.yaml
@@ -25,3 +25,4 @@ repository-settings:
 branches:
   - location: 5.0.0.0rc1
     name: stable/queens
+release-notes: https://docs.openstack.org/releasenotes/murano/queens.html
