--- a/deliverables/queens/neutron-vpnaas.yaml
+++ b/deliverables/queens/neutron-vpnaas.yaml
@@ -14,3 +14,4 @@ branches:
     name: stable/queens
 repository-settings:
   openstack/neutron-vpnaas: {}
+release-notes: https://docs.openstack.org/releasenotes/neutron-vpnaas/queens.html
