--- a/deliverables/queens/python-octaviaclient.yaml
+++ b/deliverables/queens/python-octaviaclient.yaml
@@ -18,8 +18,7 @@ releases:
       - repo: openstack/python-octaviaclient
         hash: 830e49fb0528718e8c6cea0e0828248849044133
 cycle-highlights:
-  - The Octavia OpenStack client plugin now supports quotas, load balancer QoS
-    policies, load balancer failover, listener statistics, and filtering by
-    load balancer ID.
+  - 'The Octavia OpenStack client plugin now supports quotas, load balancer QoS policies,
+    load balancer failover, listener statistics, and filtering by load balancer ID.'
 repository-settings:
   openstack/python-octaviaclient: {}
