--- a/deliverables/queens/python-troveclient.yaml
+++ b/deliverables/queens/python-troveclient.yaml
@@ -13,11 +13,11 @@ releases:
     projects:
       - repo: openstack/python-troveclient
         hash: e30e8db7e7e79e6409c22d4ea8c80e0ff5cc4672
-release-notes: https://docs.openstack.org/releasenotes/python-troveclient/unreleased.html
+release-notes: https://docs.openstack.org/releasenotes/python-troveclient/queens.html
 branches:
   - location: 2.14.0
     name: stable/queens
 repository-settings:
   openstack/python-troveclient: {}
 cycle-highlights:
-  - Migration to openstack client.
+  - 'Migration to openstack client.'
