--- a/deliverables/queens/sahara-dashboard.yaml
+++ b/deliverables/queens/sahara-dashboard.yaml
@@ -25,3 +25,4 @@ branches:
     location: 8.0.0.0rc1
 repository-settings:
   openstack/sahara-dashboard: {}
+release-notes: https://docs.openstack.org/releasenotes/sahara-dashboard/queens.html
