--- a/deliverables/queens/sahara.yaml
+++ b/deliverables/queens/sahara.yaml
@@ -25,3 +25,4 @@ branches:
     location: 8.0.0.0rc1
 repository-settings:
   openstack/sahara: {}
+release-notes: https://docs.openstack.org/releasenotes/sahara/queens.html
