--- a/deliverables/queens/trove-dashboard.yaml
+++ b/deliverables/queens/trove-dashboard.yaml
@@ -21,3 +21,4 @@ repository-settings:
 branches:
   - location: 10.0.0.0rc1
     name: stable/queens
+release-notes: https://docs.openstack.org/releasenotes/trove-dashboard/queens.html
