--- a/deliverables/queens/watcher.yaml
+++ b/deliverables/queens/watcher.yaml
@@ -29,3 +29,4 @@ releases:
         tarball-base: python-watcher
 repository-settings:
   openstack/watcher: {}
+release-notes: https://docs.openstack.org/releasenotes/watcher/queens.html
