nova: release pike 16.1.0
This is a minor version bump for
9adf97c0132c3e0d34bbb2e33b59c6e5b00bec57 which
adds an optional db schema migration. The minor
version bump is an indication to deployment tooling
that they should run the db schema migrations (even
though those are free and tooling should be running
them on upgrade regardless, but I digress).

Change-Id: I0c4d2dfc306d711b1f649d94782e8ae40475c43f

--- a/deliverables/pike/nova.yaml
+++ b/deliverables/pike/nova.yaml
@@ -54,5 +54,9 @@ releases:
     projects:
       - repo: openstack/nova
         hash: 4d4930c59af32d717088b3af28047ee1fcf09d4a
+  - version: 16.1.0
+    projects:
+      - repo: openstack/nova
+        hash: 806eda3da84d6f9b47c036ff138415458b837536
 repository-settings:
   openstack/nova: {}
