--- a/deliverables/ocata/congress.yaml
+++ b/deliverables/ocata/congress.yaml
@@ -33,5 +33,9 @@ releases:
     projects:
       - repo: openstack/congress
         hash: d635bad1ae10d84e8542916d18af573d4b1d1280
+  - version: 5.0.1
+    projects:
+      - repo: openstack/congress
+        hash: 919b78248643d7c84e7f0056831adfc9810ca396
 repository-settings:
   openstack/congress: {}
