--- a/deliverables/_independent/cyborg.yaml
+++ b/deliverables/_independent/cyborg.yaml
@@ -10,5 +10,10 @@ releases:
     projects:
       - repo: openstack/cyborg
         hash: a437d5668035c44d6164fe7b46b069e4ed4544e9
+  - version: 0.2.0
+    projects:
+      - repo: openstack/cyborg
+        hash: e42d5342b96313c2bb590f4c633cf843de4dd398
+        tarball-base: openstack-cyborg
 repository-settings:
   openstack/cyborg: {}
